fix error contrast

--- a/style.css
+++ b/style.css
@@ -775,7 +775,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #ad6b4c;
+    background-color: #754b37;
 }
 
 .tc-white {
